--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div class="app">
-        <h1>Simple Quiz</h1>
+        <img src="./images/rabit.png" alt="Rabbit" class="rabbit-image">
+        <h1>Pengetesan Kekuatan Cinta💖</h1>
+        <p id="ket">Jawab pertanyaan dibawah ini, tidak dengan pikiran, <br>cukup dengan perasaan dan ketulusan 🥰</p>
         <div class="quiz">
             <h2 id="question">Question goes here</h2>
             <div id="answer-buttons">
